--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "express": "^4.14.1",
     "moment": "^2.17.1"
